# Robopilot

./: .gitignore  Cargo.toml  License  README.md  build.rs
.github/workflows/: rust.yml
src/: main.rs  play.rs  record.rs  record_temp.rs
src/db/: mod.rs
src/play/: keyboard.rs  mod.rs  mouse.rs
src/record/: keyboard.rs  keyboard_record.rs  mod.rs  mouse.rs  mouse_record.rs  record_db.rs
