[package]
name = "autopilot"
version = "0.1.0"
description = "Mouse and Keyboard record and replay application"
keywords = ["mouse", "keyboard", "automated"]
authors = ["Darwin Subramaniam <darwin.subramaniam@keysight.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.0.14"
process_list = "0.2.1"
device_query = "0.2.8"
clap = "2.33.3"
chrono = "0.4.19"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }


[workspace]
