[package]
name = "robopilot"
version = "0.2.1"
description = "Mouse and Keyboard record and replay application"
keywords = ["mouse", "keyboard", "automated"]
authors = ["Darwin Subramaniam <darwinsubramaniam@gmail.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/udwtech/Robopilot"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.0.14"
process_list = "0.2.1"
device_query = "0.2.8"
clap = "2.33.3"
chrono = "0.4.19"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }


[workspace]
